<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/loginLayout"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="110dp"
                android:layout_marginRight="110dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="80dp"
                android:layout_marginBottom="60dp"
                android:src="@mipmap/icon_logo" />

            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/bgDivider" />
            <TextView
                android:id="@+id/ca_title"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="24sp"
                android:paddingBottom="14dp"
                android:paddingTop="14dp"
                android:text="Travel easy by sharing your data \n with total security and privacy."
                />
            <View
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="1dp"
                android:background="@color/bgDivider" />

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="70dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="72dp"
                    android:layout_height="90dp"
                    android:src="@mipmap/logo2" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/logo3" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="75dp"
                    android:src="@mipmap/logo1" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@mipmap/logo4" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/app_name"
                android:textColor="@color/textTitle"
                android:textSize="18dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/edit_text_shadow"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/login_username_c" />

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="center_vertical|left"
                    android:hint="@string/page_login_input_hint_username"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="#999999"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/edit_text_shadow"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/login_password_c" />

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="center_vertical|left"
                    android:hint="@string/page_login_input_hint_password"
                    android:inputType="text"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="#999999"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/edit_text_shadow"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/login_telephone_c" />

                <FrameLayout
                    android:visibility="gone"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_text_shadow">

                    <Spinner
                        android:id="@+id/countryCode"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:entries="@array/country_code"
                        app:theme="@style/itemSpinnerStyle"
                        />
                </FrameLayout>

                <EditText
                    android:id="@+id/etPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="center_vertical|left"
                    android:hint="@string/page_login_input_hint_phone"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="#999999"
                    android:textSize="14dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordAgainZone"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/edit_text_shadow"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/login_telephone_c" />

                <EditText
                    android:id="@+id/etPhoneNumber2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent"
                    android:gravity="center_vertical|left"
                    android:hint="@string/page_login_input_hint_confirm_phone"
                    android:inputType="phone"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textColorHint="#999999"
                    android:textSize="14dp" />

            </LinearLayout>



            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/login_button"
                    android:gravity="center"
                    android:text="@string/page_login_btn_login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="16dp" />
            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>